--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .top-container{
-  background-image: url("/Users/gdua0001/Dropbox/PhD/Atom/web development/CSS-My Site/images/girls.jpeg");
+  background-image: url("../images/girls.jpeg");
   background-size: corver;
   height: 2200px;
   padding: 30px;
